--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -88,6 +88,8 @@ set -g @dracula-ping-rate 5
 # set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 # set -g @resurrect-capture-pane-contents 'on'
 # set -g @continuum-restore 'on'
+set -g @plugin 'sainnhe/tmux-fzf'
+set-option -g detach-on-destroy off
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
