--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,3 +1,17 @@
+set -g base-index 1           # Easy to movement
+set -g detach-on-destroy off
+set -g display-time 1500      # Increase tmux messages display duration from 750ms to 4s
+set -g escape-time 0          # zero-out escape time delay
+set -g history-limit 1000000  # increase history size to 1M
+set -g mouse on               # enable mouse support
+set -g renumber-windows on    # renumber all windows when any window is closed
+set -g set-clipboard on       # use system clipboard
+set -g status-interval 2      # update status every 2 seconds
+set -g status-keys emacs      # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys, even for vim users
+set -g status-left-length 200 # increase status line length
+set -g status-position top    # macOS / darwin style
+set -g status-right ''        # empty
+
 set -g prefix C-g
 unbind C-b
 unbind C-f
@@ -7,6 +21,8 @@ unbind %
 unbind '"'
 bind '\' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
+bind g new-window -n '' lazygit
+
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
@@ -14,12 +30,8 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
-
 bind -r m resize-pane -Z
-
 bind -r ` swap-pane -D
-
-set -g mouse on
 
 set-window-option -g mode-keys vi # use `list-keys -T copy-mode-vi` to see more key
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
@@ -27,34 +39,28 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
-# Address vim mode switching delay (http://superuser.com/a/252717/65504)
-# remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 0
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+set -g status-style 'bg=default' # transparent
+set -g window-status-current-format '#[fg=magenta]#W'
+set -g window-status-format '#[fg=gray]#W'
+set -g mode-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g message-command-style bg=default,fg=yellow
 
-# Increase scrollback buffer size from 2000 to 50000 lines
-set -g history-limit 50000
-
-# Increase tmux messages display duration from 750ms to 4s
-set -g display-time 4000
+set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
+set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 
 # Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
-set -g status-interval 5
-
 # Upgrade $TERM
 set -g default-terminal "tmux-256color"
 set -sa terminal-overrides ',tmux-256color:RGB'
-
-# Emacs key bindings in tmux command prompt (prefix + :) are better than
-# vi keys, even for vim users
-set -g status-keys emacs
 
 # Focus events enabled for terminals that support them
 set -g focus-events on
 
 # Super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
-# Easy to movement
-set -g base-index 1
 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy && wl-paste -n | wl-copy -p"
 bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
@@ -64,32 +70,9 @@ set -g @plugin 'tmux-plugins/tpm' # tmux plugin manager -- use prefix - I to ins
 set -g @plugin 'tmux-plugins/tmux-sensible' # `tmux` recommended settings
 
 set -g @plugin 'christoomey/vim-tmux-navigator' # make cursor movement consistent in 'tmux' and 'vim' windows
+set -g @plugin 'sainnhe/tmux-fzf' # prop fzf
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+set -g @plugin 'joshmedeski/tmux-fzf-url'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
-# set -g @plugin 'jimeh/tmux-themepack' # a pack of various Tmux theme
-# set -g @themepack 'powerline/default/cyan' # 
-set -g @plugin 'dracula/tmux'
-# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, weather, time
-set -g @dracula-plugins "git"
-set -g @dracula-show-left-icon smiley # it can accept `session`, `smiley`, `window`, or any character.
-set -g @dracula-show-timezone false
-set -g @dracula-day-month true
-# set -g @dracula-military-time false
-set -g @dracula-show-powerline true
-# set -g @dracula-fixed-location "Wuhan"
-set -g @dracula-show-fahrenheit false # 是否使用华氏温度
-
-set -g @dracula-military-time true # use 24-hours 
-
-set -g @dracula-border-contrast true
-set -g @dracula-ping-server "google.com"
-set -g @dracula-ping-rate 5
-
-# set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @continuum-restore 'on'
-set -g @plugin 'sainnhe/tmux-fzf'
-set-option -g detach-on-destroy off
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '$HOME/.config/tmux/plugins/tpm/tpm' # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
