chore(keyd): todo kitty

--- a/config/keyd/app.conf
+++ b/config/keyd/app.conf
@@ -8,8 +8,8 @@ control.j = down
 control.k = up
 control.f = right
 control.b = left
+meta.[ = macro(C-S-tab)
+meta.] = macro(C-tab)
 
 [kitty]
 
-control.[ = macro(control-g w k)
-control.] = macro(control-g w j)
