feat(alacritty): set key bindings for tmux

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -55,6 +55,7 @@ exec-once=~/.config/hypr/scripts/screensharing.sh
 # wallpaper = monitor2,/path/to/next_image.png
 # # .. more monitors
 
+# fix nvidia driver
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
@@ -63,8 +64,8 @@ env = WLR_NO_HARDWARE_CURSORS,1
 input {
   # Remap Capslock -> Esc for Vim users  
   # kb_options=caps:escape
-  repeat_rate=50
-  repeat_delay=240
+  repeat_rate  = 50
+  repeat_delay = 240
 }
 
 gestures { 
@@ -156,10 +157,6 @@ windowrulev2 = float, class:^(org.twosheds.iwgtk)$
 windowrulev2 = float, class:^(blueberry.py)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(geeqie)$
-windowrulev2 = float, class:^(kitty)$, title:^(kitty)$, fullscreen:^(kitty)$
-
-# windowrule=float,^(kitty)$
-# windowrule=move 0 0,title:^(Firefox)(.*)$
 
 # Increase the opacity 
 windowrule = opacity 0.92, Thunar
@@ -188,19 +185,17 @@ bindm=SUPER,mouse:273,resizewindow
 
 # example binds
 bind = SUPER, Q, killactive
-bind = SUPER, B, exec, librewolf
+# bind = SUPER, B, exec, librewolf
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
 bind = SUPER, RETURN, exec, kitty
-# bind=SUPERSHIFT,F,exec,foot
-bind = SUPER, F, exec, firefox
-bind = SUPER, G, exec, chromium
-# bind=SUPER,C,killactive,
-bind = SUPERSHIFT, Q, exit
-bind = SUPER, E, exec, pcmanfm
-bind = SUPER, P, pseudo, 
-bind = SUPER, ESCAPE, exec, sudo systemctl suspend
+bind = SUPERSHIFT, RETURN, exec, alacritty
+bind = SUPERSHIFT, G, exec, chromium
+bind = SUPERSHIFT, F, exec, firefox
+# bind = SUPER, E, exec, pcmanfm
+# bind = SUPER, P, pseudo, 
+# bind = SUPER, ESCAPE, exec, sudo systemctl suspend
 # bind cliphist list
 bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
