--- a/config/keyd/app.conf
+++ b/config/keyd/app.conf
@@ -8,8 +8,22 @@ control.j = down
 control.k = up
 control.f = right
 control.b = left
+meta.a = macro(C-a)
+meta.[ = macro(C-S-tab)
+meta.] = macro(C-tab)
+
+[firefox]
+
+control.[ = macro(C-S-tab)
+control.] = macro(C-tab)
+control.a = home
+control.e = end
+control.j = down
+control.k = up
+control.f = right
+control.b = left
+meta.a = macro(C-a)
 meta.[ = macro(C-S-tab)
 meta.] = macro(C-tab)
 
 [kitty]
-
