--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set -g base-index 1           # Easy to movement
+setw -g pane-base-index 1
 set -g detach-on-destroy off
 set -g display-time 1500      # Increase tmux messages display duration from 750ms to 4s
 set -g escape-time 0          # zero-out escape time delay
