--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -189,8 +189,8 @@ bind = SUPER, Q, killactive
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
-bind = SUPER, RETURN, exec, kitty
-bind = SUPERSHIFT, RETURN, exec, alacritty
+bind = SUPER, RETURN, exec, alacritty
+bind = SUPERSHIFT, RETURN, exec, kitty
 bind = SUPERSHIFT, G, exec, chromium
 bind = SUPERSHIFT, F, exec, firefox
 # bind = SUPER, E, exec, pcmanfm
