--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -53,9 +53,14 @@ set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 
 # Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @tmux-nerd-font-window-name-show-name false
+set -g @t-fzf-prompt '  '
+set -g @fzf-url-history-limit '2000'
+
 # Upgrade $TERM
 set -g default-terminal "tmux-256color"
-set -sa terminal-overrides ',tmux-256color:RGB'
+set -sa terminal-feature ',tmux-256color:RGB'
 
 # Focus events enabled for terminals that support them
 set -g focus-events on
@@ -63,17 +68,15 @@ set -g focus-events on
 # Super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
 
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy && wl-paste -n | wl-copy -p"
-bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy && wl-paste -n | wl-copy -p"
+# bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
 
 # list of tmux plugins
-set -g @plugin 'tmux-plugins/tpm' # tmux plugin manager -- use prefix - I to install
-set -g @plugin 'tmux-plugins/tmux-sensible' # `tmux` recommended settings
-
 set -g @plugin 'christoomey/vim-tmux-navigator' # make cursor movement consistent in 'tmux' and 'vim' windows
 set -g @plugin 'sainnhe/tmux-fzf' # prop fzf
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'tmux-plugins/tpm' # tmux plugin manager -- use prefix - I to install
 
 run '$HOME/.config/tmux/plugins/tpm/tpm' # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
