--- a/config/keyd/app.conf
+++ b/config/keyd/app.conf
@@ -6,8 +6,11 @@ control.a = home
 control.e = end
 control.j = down
 control.k = up
+control.n = down
+control.p = up
 control.f = right
 control.b = left
+control.d = delete
 meta.a = macro(C-a)
 meta.[ = macro(C-S-tab)
 meta.] = macro(C-tab)
@@ -18,6 +21,8 @@ control.[ = macro(C-S-tab)
 control.] = macro(C-tab)
 control.a = home
 control.e = end
+control.n = down
+control.p = up
 control.j = down
 control.k = up
 control.f = right
