--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -35,14 +35,14 @@ window:
 key_bindings:
   - { key: V, mods: Command, action: Paste }
   - { key: C, mods: Command, action: Copy }
-  # - { key: LBracket, mods: Alt, chars: "\x07sk\x0a" }
-  # - { key: RBracket, mods: Alt, chars: "\x07sj\x0a" }
+  - { key: LBracket, mods: Command, chars: "\x07\x28" } # go to the last session
+  - { key: RBracket, mods: Command, chars: "\x07\x29" } # go to the next session
   - { key: Backslash, mods: Command, chars: "\x07\\" } # split tmux window horizontally
   - { key: Minus, mods: Command, chars: "\x07-" } # split tmux window vertically
   - { key: G, mods: Command, chars: "\x07g" } # open git manager 'jesseduffield/lazygit'
   - { key: F, mods: Command, chars: "\x07\x54" } # open t - tmux smart session manager
   - { key: S, mods: Command, chars: "\x07s" } # open interactive tmux session client
-  - { key: L, mods: Command, chars: "\x07L" } # switch to the last tmux session
+  - { key: P, mods: Command, chars: "\x07L" } # switch to the last tmux session
   - { key: U, mods: Command, chars: "\x07u" } # open URLs 'joshmedeski/tmux-fzf-url'
   - { key: C, mods: Command, chars: "\x07c" } # create a new tmux window
   - { key: X, mods: Command, chars: "\x07x" } # kill the current pane
@@ -51,8 +51,6 @@ key_bindings:
   - { key: Grave, mods: Control, chars: "\x07p" } # switch to previous tmux window
   - { key: D, mods: Command, chars: "\x07F" } # prop tmux
   - { key: Comma, mods: Command, chars: "\x07," } # rename the current tmux window
-  # - { key: LBracket, mods: Command|Shift, chars: "\x07p" } # switch to next tmux window
-  # - { key: RBracket, mods: Command|Shift, chars: "\x07n" } # switch to previous tmux window
   # - { key: LBracket, mods: Command, chars: "\x0f" } # navigate back in vim (ctrl+o)
   # - { key: RBracket, mods: Command, chars: "\x09" } # navigate forward in vim (ctrl+i)
   - { key: Semicolon, mods: Command, chars: "\x07:" } # enter the tmux command prompt
