--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -36,6 +36,7 @@ key_bindings:
   - { key: V, mods: Command, action: Paste }
   - { key: C, mods: Command, action: Copy }
   - { key: LBracket, mods: Command, chars: "\x07\x28" } # go to the last session
+  - { key: LBracket, mods: Command|Control, chars: "\x07[" } # go to the last session
   - { key: RBracket, mods: Command, chars: "\x07\x29" } # go to the next session
   - { key: Backslash, mods: Command, chars: "\x07\\" } # split tmux window horizontally
   - { key: Minus, mods: Command, chars: "\x07-" } # split tmux window vertically
