chore(tmux): todo tmux color

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -59,8 +59,8 @@ set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 
 # Upgrade $TERM
-set -g default-terminal "tmux-256color"
-set -sa terminal-feature ',tmux-256color:RGB'
+set-option -g  default-terminal   'tmux-256color'
+set-option -sa terminal-overrides ',tmux-256color:RGB'
 
 # Focus events enabled for terminals that support them
 set -g focus-events on
