--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,54 +12,35 @@
 |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|  \____\___/|_| |_|_| |_|\__, |___/
        |___/|_|                                                      |___/    
 #########################################################################################
+## lizhi
+## 2023-05-03
 
 # You have to change this based on your monitor 
-monitor=eDP-1,1920x1080@60,0x0,1
-# Status bar :) 
-exec-once=eww open bar
-exec-once=waybar
-#Notification 
-exec-once=dunst
-#TeamViewer 
-exec-once=teamviewer --daemon start
-# Wallpaper
-exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/landscape.jpg -m fill
-# For screen sharing 
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# For keyboard 
-exec-once=fcitx5 -d --replace
-# For lockscreen
-exec-once=swayidle -w timeout 2000 'swaylock-fancy'
-# Start Page
-exec-once=~/.config/hypr/scripts/startpage.sh
+# monitor = eDP-1,1920x1080@60,0x0,1
+monitor = ,preferred,auto,auto
+
+exec-once = ~/.config/hypr/scripts/screensharing.sh
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing 
+exec-once = waybar # For status bar
+exec-once = dunst # For Notification 
+exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/landscape.jpg -m fill # Wallpaper
+exec-once = fcitx5 -d --replace # For keyboard 
+exec-once = swayidle -w timeout 2000 'swaylock-fancy' # For lockscreen
 # For clipboard history
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = keyd-application-mapper -d # key bind for chromium
 
-# Bluetooth
-exec-once=blueman-applet # Make sure you have installed blueman
+# exec-once = teamviewer --daemon start # TeamViewer 
+# exec-once = ~/.config/hypr/scripts/startpage.sh # Start Page
+# # Bluetooth
+# exec-once = blueman-applet # Make sure you have installed blueman
 
-# Screen Sharing 
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=~/.config/hypr/scripts/screensharing.sh
-
-
-# preload = /path/to/image.png
-# #if more than one preload is desired then continue to preload other backgrounds
-# preload = /path/to/next_image.png
-# # .. more preloads
-#
-# #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-# wallpaper = monitor1,/path/to/image.png
-# #if more than one monitor in use, can load a 2nd image
-# wallpaper = monitor2,/path/to/next_image.png
-# # .. more monitors
-
-# fix nvidia driver
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+# # fix nvidia driver
+# env = LIBVA_DRIVER_NAME, nvidia
+# env = XDG_SESSION_TYPE, wayland
+# env = __GLX_VENDOR_LIBRARY_NAME, nvidia
+# env = WLR_NO_HARDWARE_CURSORS, 1
 
 input {
   # Remap Capslock -> Esc for Vim users  
@@ -68,64 +49,76 @@ input {
   repeat_delay = 240
 }
 
-gestures { 
-  workspace_swipe=true 
-  workspace_swipe_min_speed_to_force=5
-}
-
 general {
-    layout = dwindle
-    sensitivity = 1.0 # for mouse cursor
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 2
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border=rgb(cdd6f4)
+    col.inactive_border = rgba(595959aa)
 
-    gaps_in=5
-    gaps_out=5
-    border_size=2
-    col.active_border=0xff5e81ac
-    col.inactive_border=0x66333333
+    layout = dwindle
+
+    sensitivity = 1.0 # for mouse cursor
 
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
-    rounding=5
-    blur=1
-    blur_size=6.8 # minimum 1
-    blur_passes=2 # minimum 1, more passes = more resource intensive.
+    rounding = 5
+    blur = 1
+    blur_size = 1 # minimum 1
+    blur_passes = 1 # minimum 1, more passes = more resource intensive.
     blur_new_optimizations = true   
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
-    drop_shadow=true
-    shadow_range=15
-    col.shadow=0xffa7caff
-    col.shadow_inactive=0x50000000
+    drop_shadow = true
+    shadow_range = 3
+    col.shadow = 0xffa7caff
+    col.shadow_inactive = 0x50000000
 }
 
-# Blur for waybar 
-blurls=waybar
-blurls=lockscreen
 
+# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 animations {
-    enabled=1
-    # bezier=overshot,0.05,0.9,0.1,1.1
-    bezier=overshot,0.13,0.99,0.29,1.1
-    animation=windows,1,4,overshot,popin
-    animation=fade,1,10,default
-    animation=workspaces,1,6,overshot,slide
-    animation=border,1,10,default
+    enabled = 1
+
+    bezier = overshot,0.13,0.99,0.29,1.1
+    animation = windows,1,4,overshot,popin
+    animation = fade,1,10,default
+    animation = workspaces,1,6,overshot,slide
+    animation = border,1,10,default
 }
 
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile=1 # enable pseudotiling on dwindle
-    # force_split=2
-    force_split=0
+    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = yes # you probably want this
+    pseudotile = 1 # enable pseudotiling on dwindle
+    force_split = 0
     no_gaps_when_only = true
 }
 
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
   new_on_top=true
   no_gaps_when_only = true
+    new_is_master = true
 }
+
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+gestures {
+    workspace_swipe = off
+}
+
+# Example per-device config
+# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
+device:epic mouse V1 {
+    sensitivity = -0.5
+}
+
 
 # misc {
 #   disable_hyprland_logo=true
@@ -133,7 +126,6 @@ master {
 #   mouse_move_enables_dpms=true
 #   no_vfr=1
 # }
-
 ########################################################################################
 
 \ \        / (_)         | |                   |  __ \     | |          
@@ -159,10 +151,11 @@ windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(geeqie)$
 
 # Increase the opacity 
-windowrule = opacity 0.92, Thunar
-windowrule = opacity 0.96, discord
-windowrule = opacity 0.9, VSCodium
-windowrule = opacity 0.88, obsidian
+windowrulev2 = opacity 0.8, class:^(kitty)$
+windowrulev2 = opacity 0.8, class:^(alacritty)$
+windowrulev2 = opacity 0.8, class:^(thunar)$
+windowrulev2 = opacity 0.8, class:^(VSCodium)$
+
 
 ^.*nvim.*$
 windowrule=tile,librewolf
@@ -211,8 +204,9 @@ bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPER, T, togglefloating,
 bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
 
-# Screen shot 
-bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
+# bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
+bind = SUPERSHIFT, S, exec, grim -t jpeg -q 10 -g "$(slurp)" - | swappy -f - # take a screenshot
+
 # Screen recorder
 bind = SUPER, R, exec, wf-recorder -g "$(slurp)"
 # Emoji selector 
