refactor(install): install sh

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,45 +23,40 @@ exec-once = ~/.config/hypr/scripts/screensharing.sh
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing 
 exec-once = waybar # For status bar
 exec-once = dunst # For Notification 
-exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/landscape.jpg -m fill # Wallpaper
+exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
 exec-once = fcitx5 -d --replace # For keyboard 
-exec-once = swayidle -w timeout 2000 'swaylock-fancy' # For lockscreen
-# For clipboard history
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+# exec-once = swayidle -w timeout 600 'swaylock-fancy' 
+exec-once = swayidle -w \
+                timeout 600 'swaylock -f -c 000000' \
+                timeout 600 'swaymsg "output * dpms off"' \
+                     resume 'swaymsg "output * dpms on"' \
+                before-sleep 'swaylock -f -c 000000' # For lockscreen
+exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d # key bind for chromium
 
 # exec-once = teamviewer --daemon start # TeamViewer 
 # exec-once = ~/.config/hypr/scripts/startpage.sh # Start Page
-# # Bluetooth
-# exec-once = blueman-applet # Make sure you have installed blueman
-
-# # fix nvidia driver
-# env = LIBVA_DRIVER_NAME, nvidia
-# env = XDG_SESSION_TYPE, wayland
-# env = __GLX_VENDOR_LIBRARY_NAME, nvidia
-# env = WLR_NO_HARDWARE_CURSORS, 1
+# exec-once = blueman-applet # # Bluetooth Make sure you have installed blueman
 
 input {
-  # Remap Capslock -> Esc for Vim users  
-  # kb_options=caps:escape
-  repeat_rate  = 50
-  repeat_delay = 240
+    repeat_rate  = 50
+    repeat_delay = 240
 }
 
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 3
+    gaps_out = 5
     border_size = 2
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border=rgb(cdd6f4)
+    col.active_border = rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 
     sensitivity = 1.0 # for mouse cursor
 
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+    apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -103,9 +98,9 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-  new_on_top=true
-  no_gaps_when_only = true
-    new_is_master = true
+    new_on_top        = true
+    new_is_master     = true
+    no_gaps_when_only = true
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -118,7 +113,6 @@ gestures {
 device:epic mouse V1 {
     sensitivity = -0.5
 }
-
 
 # misc {
 #   disable_hyprland_logo=true
@@ -141,29 +135,15 @@ device:epic mouse V1 {
 windowrule = float, Rofi
 windowrule = float, pavucontrol
 windowrulev2 = float, class:^()$,title:^(Picture in picture)$
-windowrulev2 = float, class:^(brave)$,title:^(Save File)$
-windowrulev2 = float, class:^(brave)$,title:^(Open File)$
-windowrulev2 = float, class:^(LibreWolf)$,title:^(Picture-in-Picture)$
-windowrulev2 = float, class:^(blueman-manager)$
-windowrulev2 = float, class:^(org.twosheds.iwgtk)$
-windowrulev2 = float, class:^(blueberry.py)$
-windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = float, class:^(geeqie)$
 
 # Increase the opacity 
 windowrulev2 = opacity 0.8, class:^(kitty)$
 windowrulev2 = opacity 0.8, class:^(alacritty)$
 windowrulev2 = opacity 0.8, class:^(thunar)$
-windowrulev2 = opacity 0.8, class:^(VSCodium)$
 
-
-^.*nvim.*$
-windowrule=tile,librewolf
-windowrule=tile,spotify
-# windowrule=opacity 1,neovim
-bindm=SUPER,mouse:272,movewindow
-bindm=SUPER,mouse:273,resizewindow
-
+# Move/resize windows with SUPER + LMB/RMB and dragging
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizewindow
 ###########################################
   ____  _           _ _                 
  |  _ \(_)         | (_)                
@@ -178,6 +158,7 @@ bindm=SUPER,mouse:273,resizewindow
 
 # example binds
 bind = SUPER, Q, killactive
+bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 # bind = SUPER, B, exec, librewolf
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT ,M ,fullscreen, 0
@@ -240,7 +221,6 @@ bind = SUPER, 7, workspace, 7
 bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
-
 
 bind = SUPERCTRL, 1, movetoworkspace, 1
 bind = SUPERCTRL, 2, movetoworkspace, 2
