--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,11 +1,11 @@
 {
     "height": 30, // Waybar height (to be removed for auto height)
     "layer": "top", // Waybar at top layer
-    "margin-top": 6,
-    "margin-left": 10,
-    "margin-bottom": 6,
-    "margin-right": 10,
-    "spacing": 5, // Gaps between modules (4px)
+    "padding-top": 6,
+    "padding-left": 10,
+    "padding-bottom": 6,
+    "padding-right": 10,
+    "spacing": 2, // Gaps between modules (4px)
     "modules-left": ["custom/launcher", "cpu", "memory", "wlr/workspaces"],
     "modules-center": ["hyprland/window"],
     "modules-right": ["tray", "pulseaudio", "network", "clock", "custom/power-menu"],
