--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,12 +25,7 @@ exec-once = waybar # For status bar
 exec-once = dunst # For Notification 
 exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
 exec-once = fcitx5 -d --replace # For keyboard 
-# exec-once = swayidle -w timeout 600 'swaylock-fancy' 
-exec-once = swayidle -w \
-                timeout 600 'swaylock -f -c 000000' \
-                timeout 600 'swaymsg "output * dpms off"' \
-                     resume 'swaymsg "output * dpms on"' \
-                before-sleep 'swaylock -f -c 000000' # For lockscreen
+exec-once = swayidle -w timeout 600 'swaylock-fancy' 
 exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d # key bind for chromium
@@ -194,7 +189,6 @@ bind = SUPER, R, exec, wf-recorder -g "$(slurp)"
 # bind=SUPER,E,exec,rofi -modi emoji -show emoji
 
 # bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
-
 
 bind = SUPER, J, movefocus, d
 bind = SUPER, K, movefocus, u
