chore(zsh): fix marker

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -52,6 +52,13 @@ set -g message-command-style bg=default,fg=yellow
 set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
+
 # Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @tmux-nerd-font-window-name-show-name false
