--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = waybar # For status bar
 exec-once = dunst # For Notification 
 exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
 exec-once = fcitx5 -d --replace # For keyboard 
-exec-once = swayidle -w timeout 600 'swaylock-fancy' 
+exec-once = swayidle -w timeout 600 'swaylock -f -c 000000' 
 exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d # key bind for chromium
@@ -43,7 +43,6 @@ general {
     gaps_in = 3
     gaps_out = 5
     border_size = 2
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border = rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
@@ -165,7 +164,6 @@ bind = SUPERSHIFT, F, exec, firefox
 # bind = SUPER, E, exec, pcmanfm
 # bind = SUPER, P, pseudo, 
 # bind = SUPER, ESCAPE, exec, sudo systemctl suspend
-# bind cliphist list
 bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
