--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = waybar # For status bar
 exec-once = dunst # For Notification 
 exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
 exec-once = fcitx5 -d --replace # For keyboard 
-exec-once = swayidle -w timeout 600 'swaylock -f -c 000000' 
+exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' 
 exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d # key bind for chromium
@@ -159,7 +159,8 @@ bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
 bind = SUPER, RETURN, exec, alacritty
 bind = SUPERSHIFT, RETURN, exec, kitty
-bind = SUPERSHIFT, G, exec, chromium
+bind = SUPERCTRL, RETURN, exec, emacs
+bind = SUPER, G, exec, chromium
 bind = SUPERSHIFT, F, exec, firefox
 # bind = SUPER, E, exec, pcmanfm
 # bind = SUPER, P, pseudo, 
