--- a/config/keyd/app.conf
+++ b/config/keyd/app.conf
@@ -27,6 +27,7 @@ control.j = down
 control.k = up
 control.f = right
 control.b = left
+control.d = delete
 meta.a = macro(C-a)
 meta.[ = macro(C-S-tab)
 meta.] = macro(C-tab)
