chore: add key bindings for kitty

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,9 +6,8 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-
-# set the term to xterm-256color with italic support
-term xterm-256color
+# set the term to screen-256color with italic support
+term screen-256color
 
 font_size 22
 background_opacity 0.7
@@ -19,11 +18,7 @@ initial_window_height 35c
 window_padding_width 20
 confirm_os_window_close 0
 
-map cmd+c copy_to_clipboard
-map cmd+v paste_from_clipboard
-
 # Upstream colors {{{
-
 # Cursor
 cursor #CBCED3
 cursor_text_color #A5B6CF
@@ -61,3 +56,4 @@ map kitty_mod+t     new_tab_with_cwd
 # }}
 
 include snazzy.conf
+include map.conf
