--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -13,15 +13,6 @@ set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
 set -g status-right ''        # empty
 
-set -g prefix C-g
-unbind C-b
-unbind C-f
-bind-key C-g send-prefix
-
-unbind %
-unbind '"'
-bind '\' split-window -h -c '#{pane_current_path}'
-bind '-' split-window -v -c '#{pane_current_path}'
 bind g new-window -n '' lazygit
 
 unbind r
@@ -52,11 +43,6 @@ set -g message-command-style bg=default,fg=yellow
 set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 # Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
@@ -66,8 +52,8 @@ set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 
 # Upgrade $TERM
-set-option -g  default-terminal   'tmux-256color'
-set-option -sa terminal-overrides ',tmux-256color:RGB'
+set-option -g  default-terminal   'screen-256color'
+set-option -sa terminal-features ',*256*:RGB'
 
 # Focus events enabled for terminals that support them
 set -g focus-events on
