--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,36 +1,35 @@
 ########################################################################################
- __  __ _       _                 _ 
+ __  __ _       _                 _
 |  \/  (_)_ __ (_)_ __ ___   __ _| |
 | |\/| | | '_ \| | '_ ` _ \ / _` | |
 | |  | | | | | | | | | | | | (_| | |
 |_|  |_|_|_| |_|_|_| |_| |_|\__,_|_|
-                                    
- _   _                  _                 _    ____             __ _           
-| | | |_   _ _ __  _ __| | __ _ _ __   __| |  / ___|___  _ __  / _(_) __ _ ___ 
+
+ _   _                  _                 _    ____             __ _
+| | | |_   _ _ __  _ __| | __ _ _ __   __| |  / ___|___  _ __  / _(_) __ _ ___
 | |_| | | | | '_ \| '__| |/ _` | '_ \ / _` | | |   / _ \| '_ \| |_| |/ _` / __|
 |  _  | |_| | |_) | |  | | (_| | | | | (_| | | |__| (_) | | | |  _| | (_| \__ \
 |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|  \____\___/|_| |_|_| |_|\__, |___/
-       |___/|_|                                                      |___/    
+       |___/|_|                                                      |___/
 #########################################################################################
 ## lizhi
 ## 2023-05-03
 
-# You have to change this based on your monitor 
-# monitor = eDP-1,1920x1080@60,0x0,1
+# You have to change this based on your monitor
 monitor = , preferred, auto, auto
 
 exec-once = ~/.config/hypr/scripts/screensharing.sh
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing 
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing
 exec-once = waybar # For status bar
-exec-once = dunst # For Notification 
+exec-once = dunst # For Notification
 exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
-exec-once = fcitx5 -d --replace # For keyboard 
-exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' 
+exec-once = fcitx5 -d --replace # For keyboard
+exec-once = swayidle -w timeout 300 'swaylock -f -c 000000'
 exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d # key bind for chromium
 
-# exec-once = teamviewer --daemon start # TeamViewer 
+# exec-once = teamviewer --daemon start # TeamViewer
 # exec-once = ~/.config/hypr/scripts/startpage.sh # Start Page
 # exec-once = blueman-applet # # Bluetooth Make sure you have installed blueman
 
@@ -59,7 +58,7 @@ decoration {
     blur = 1
     blur_size = 1 # minimum 1
     blur_passes = 1 # minimum 1, more passes = more resource intensive.
-    blur_new_optimizations = true   
+    blur_new_optimizations = true
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
@@ -116,8 +115,8 @@ device:epic mouse V1 {
 # }
 ########################################################################################
 
-\ \        / (_)         | |                   |  __ \     | |          
-  \ \  /\  / / _ _ __   __| | _____      _____  | |__) |   _| | ___  ___ 
+\ \        / (_)         | |                   |  __ \     | |
+  \ \  /\  / / _ _ __   __| | _____      _____  | |__) |   _| | ___  ___
    \ \/  \/ / | | '_ \ / _` |/ _ \ \ /\ / / __| |  _  / | | | |/ _ \/ __|
     \  /\  /  | | | | | (_| | (_) \ V  V /\__ \ | | \ \ |_| | |  __/\__ \
      \/  \/   |_|_| |_|\__,_|\___/ \_/\_/ |___/ |_|  \_\__,_|_|\___||___/
@@ -130,7 +129,7 @@ windowrule = float, Rofi
 windowrule = float, pavucontrol
 windowrulev2 = float, class:^()$,title:^(Picture in picture)$
 
-# Increase the opacity 
+# Increase the opacity
 windowrulev2 = opacity 0.8, class:^(kitty)$
 windowrulev2 = opacity 0.8, class:^(alacritty)$
 windowrulev2 = opacity 0.8, class:^(thunar)$
@@ -139,14 +138,14 @@ windowrulev2 = opacity 0.8, class:^(thunar)$
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 ###########################################
-  ____  _           _ _                 
- |  _ \(_)         | (_)                
- | |_) |_ _ __   __| |_ _ __   __ _ ___ 
+  ____  _           _ _
+ |  _ \(_)         | (_)
+ | |_) |_ _ __   __| |_ _ __   __ _ ___
  |  _ <| | '_ \ / _` | | '_ \ / _` / __|
  | |_) | | | | | (_| | | | | | (_| \__ \
  |____/|_|_| |_|\__,_|_|_| |_|\__, |___/
-                               __/ |    
-                              |___/     
+                               __/ |
+                              |___/
 
 ###########################################
 
@@ -157,34 +156,36 @@ bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
-bind = SUPER, RETURN, exec, alacritty
-bind = SUPERSHIFT, RETURN, exec, kitty
+bind = SUPER, RETURN, exec, kitty
+bind = SUPERCTRL, A, exec, ~/.config/hypr/scripts/alacritty_ssh_hk.sh
+bind = SUPERCTRL, S, exec, ~/.config/hypr/scripts/alacritty_ssh_tk.sh
+bind = SUPERCTRL, D, exec, ~/.config/hypr/scripts/alacritty_ssh_openwrt.sh
+bind = SUPERSHIFT, RETURN, exec, alacritty
 bind = SUPERCTRL, RETURN, exec, emacs
 bind = SUPER, G, exec, chromium
 bind = SUPERSHIFT, F, exec, firefox
 # bind = SUPER, E, exec, pcmanfm
-# bind = SUPER, P, pseudo, 
+# bind = SUPER, P, pseudo,
 # bind = SUPER, ESCAPE, exec, sudo systemctl suspend
 bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
-bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
-bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
-bind=,XF86AudioRaiseVolume,exec,~/.config/hypr/scripts/volume up
-bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
+# bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
+# bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
+# bind=,XF86AudioRaiseVolume,exec,~/.config/hypr/scripts/volume up
+# bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
-bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
+# bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
+# bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
 bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
 bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPER, T, togglefloating,
-bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
+bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu
 
-# bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-bind = SUPERSHIFT, S, exec, grim -t jpeg -q 10 -g "$(slurp)" - | swappy -f - # take a screenshot
+bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 
 # Screen recorder
 bind = SUPER, R, exec, wf-recorder -g "$(slurp)"
-# Emoji selector 
+# Emoji selector
 # bind=SUPER,E,exec,rofi -modi emoji -show emoji
 
 # bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
