--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,11 +6,11 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-# set the term to screen-256color with italic support
-term screen-256color
+# set the term to xterm-256color with italic support
+term xterm-256color
 
 font_size 22
-background_opacity 0.7
+background_opacity 0.8
 
 # window settings
 initial_window_width 95c
@@ -18,42 +18,10 @@ initial_window_height 35c
 window_padding_width 20
 confirm_os_window_close 0
 
-# Upstream colors {{{
-# Cursor
-cursor #CBCED3
-cursor_text_color #A5B6CF
-
-# Selection highlight
-selection_foreground #A5B6CF
-selection_background #1C1E27
-
-
-# The color for highlighting URLs on mouse-over
-# url_color #9ece6a
-url color #5de4c7
-
-# Window borders
-active_border_color #3d59a1
-inactive_border_color #101014
-bell_border_color #fffac2
-
-# Tab bar
-tab_bar_style fade
-tab_fade 1
-active_tab_foreground   #3d59a1
-active_tab_background   #16161e
-active_tab_font_style   bold
-inactive_tab_foreground #787c99
-inactive_tab_background #16161e
-inactive_tab_font_style bold
-tab_bar_background #101014
-
-# Title bar
-macos_titlebar_color #16161e
-
 # {{{ Keybindings
 map kitty_mod+t     new_tab_with_cwd
 # }}
 
+include theme.conf
 include snazzy.conf
 include map.conf
