--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -156,11 +156,11 @@ bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
-bind = SUPER, RETURN, exec, kitty
+bind = SUPER, RETURN, exec, alacritty
+bind = SUPERSHIFT, RETURN, exec, kitty
 bind = SUPERCTRL, A, exec, ~/.config/hypr/scripts/alacritty_ssh_hk.sh
 bind = SUPERCTRL, S, exec, ~/.config/hypr/scripts/alacritty_ssh_tk.sh
 bind = SUPERCTRL, D, exec, ~/.config/hypr/scripts/alacritty_ssh_openwrt.sh
-bind = SUPERSHIFT, RETURN, exec, alacritty
 bind = SUPERCTRL, RETURN, exec, emacs
 bind = SUPER, G, exec, chromium
 bind = SUPERSHIFT, F, exec, firefox
