--- a/config/kitty/map.conf
+++ b/config/kitty/map.conf
@@ -1,9 +1,9 @@
-map super+v paste_from_clipboard
 map super+c copy_to_clipboard
+map super+v paste_from_clipboard
 map super+ctrl+[ send_text all \x02[
 map super+[ send_text all \x02\x28
 map super+] send_text all \x02\x29
-map super+\\ send_text all \x02%
+map super+backslash send_text all \x02%
 map super+- send_text all \x02\"
 map super+shift+g send_text all \x02g
 map super+f send_text all \x02\x54
@@ -14,7 +14,9 @@ map super+a send_text all \x02c
 map super+x send_text all \x02x
 map super+z send_text all \x02z
 map super+tab send_text all \x02n
-map ctrl+` send_text all \x02p
+map super+o send_text all \x02p
+map ctrl+` send_text all \x02`
+map ctrl+space send_text all \x02\x20
 map super+d send_text all \x02F
 map super+, send_text all \x02,
 map super+; send_text all \x02:
