--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,6 +14,8 @@ set -g status-position top    # macOS / darwin style
 set -g status-right ''        # empty
 
 bind g new-window -n '' lazygit
+bind '%' split-window -c '#{pane_current_path}' -h
+bind '"' split-window -c '#{pane_current_path}'
 
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
@@ -22,14 +24,12 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
-bind -r m resize-pane -Z
 bind -r ` swap-pane -D
 
 set-window-option -g mode-keys vi # use `list-keys -T copy-mode-vi` to see more key
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+# bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+# bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+# unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
