--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -47,7 +47,9 @@ key_bindings:
  - { key: X,         mods: Command,         chars: "\x02x"    } # kill the current pane
  - { key: Z,         mods: Command,         chars: "\x02z"    } # toggle zoom state of the current tmux pane
  - { key: Tab,       mods: Command,         chars: "\x02n"    } # switch to next tmux window
- - { key: Grave,     mods: Control,         chars: "\x02p"    } # switch to previous tmux window
+ - { key: O,         mods: Command,         chars: "\x02p"    } # switch to previous tmux window
+ - { key: Grave,     mods: Control,         chars: "\x02`"    } # swap pane
+ - { key: Space,     mods: Control,         chars: "\x02 "    } # next layout
  - { key: D,         mods: Command,         chars: "\x02F"    } # prop tmux
  - { key: Comma,     mods: Command,         chars: "\x02,"    } # rename the current tmux window
  - { key: Semicolon, mods: Command,         chars: "\x02:"    } # enter the tmux command prompt
