--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,31 +1,98 @@
-# Upstream colors {{{
-# Cursor
-cursor #CBCED3
-cursor_text_color #A5B6CF
+# # Upstream colors {{{
+# # Cursor
+# cursor #CBCED3
+# cursor_text_color #A5B6CF
+#
+# # Selection highlight
+# selection_foreground #A5B6CF
+# selection_background #1C1E27
+#
+# # The color for highlighting URLs on mouse-over
+# # url_color #9ECE6A
+# url color #5DE4C7
+#
+# # Window borders
+# active_border_color #3D59A1
+# inactive_border_color #101014
+# bell_border_color #FFFAC2
+#
+# # Tab bar
+# tab_bar_style fade
+# tab_fade 1
+# active_tab_foreground   #3D59A1
+# active_tab_background   #16161E
+# active_tab_font_style   bold
+# inactive_tab_foreground #787C99
+# inactive_tab_background #16161E
+# inactive_tab_font_style bold
+# tab_bar_background #101014
+#
+# # Title bar
+# macos_titlebar_color #16161E
+#
+# # The basic colors
+# foreground           #CAD3F5
+# background           #24273A
+# selection_foreground #24273A
+# selection_background #F4DBD6
 
-# Selection highlight
-selection_foreground #A5B6CF
-selection_background #1C1E27
+# Cursor colors
+cursor            #F4DBD6
+cursor_text_color #24273A
 
-# The color for highlighting URLs on mouse-over
-# url_color #9ECE6A
-url color #5DE4C7
+# URL underline color when hovering with mouse
+url_color #F4DBD6
 
-# Window borders
-active_border_color #3D59A1
-inactive_border_color #101014
-bell_border_color #FFFAC2
+# Kitty window border colors
+active_border_color   #B7BDF8
+inactive_border_color #6E738D
+bell_border_color     #EED49F
 
-# Tab bar
-tab_bar_style fade
-tab_fade 1
-active_tab_foreground   #3D59A1
-active_tab_background   #16161E
-active_tab_font_style   bold
-inactive_tab_foreground #787C99
-inactive_tab_background #16161E
-inactive_tab_font_style bold
-tab_bar_background #101014
+# Tab bar colors
+active_tab_foreground   #181926
+active_tab_background   #C6A0F6
+inactive_tab_foreground #CAD3F5
+inactive_tab_background #1E2030
+tab_bar_background      #181926
 
-# Title bar
-macos_titlebar_color #16161E
+# Colors for marks (marked text in the terminal)
+mark1_foreground #24273A
+mark1_background #B7BDF8
+mark2_foreground #24273A
+mark2_background #C6A0F6
+mark3_foreground #24273A
+mark3_background #7DC4E4
+
+# The 16 terminal colors
+
+# black
+color0 #494D64
+color8 #5B6078
+
+# red
+color1 #ED8796
+color9 #ED8796
+
+# green
+color2  #A6DA95
+color10 #A6DA95
+
+# yellow
+color3  #EED49F
+color11 #EED49F
+
+# blue
+color4  #8AADF4
+color12 #8AADF4
+
+# magenta
+color5  #F5BDE6
+color13 #F5BDE6
+
+# cyan
+color6  #8BD5CA
+color14 #8BD5CA
+
+# white
+color7  #B8C0E0
+color15 #A5ADCB
