--- a/config/kitty/map.conf
+++ b/config/kitty/map.conf
@@ -15,7 +15,8 @@ map super+x send_text all \x02x
 map super+z send_text all \x02z
 map super+tab send_text all \x02n
 map super+o send_text all \x02p
-map ctrl+` send_text all \x02`
+map ctrl+[ send_text all \x02{
+map ctrl+] send_text all \x02}
 map ctrl+space send_text all \x02\x20
 map super+d send_text all \x02F
 map super+, send_text all \x02,
