--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,6 @@
-set -g base-index 1           # Easy to movement
+set  -g base-index 1          # Easy to movement
 setw -g pane-base-index 1
+
 set -g detach-on-destroy off
 set -g display-time 1500      # Increase tmux messages display duration from 750ms to 4s
 set -g escape-time 0          # zero-out escape time delay
@@ -24,24 +25,19 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
-bind -r ` swap-pane -D
 
-set-window-option -g mode-keys vi # use `list-keys -T copy-mode-vi` to see more key
-# bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-# bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-# unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
-
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
-set -g status-style 'bg=default' # transparent
-set -g window-status-current-format '#[fg=magenta]#W'
-set -g window-status-format '#[fg=gray]#W'
-set -g mode-style bg=default,fg=yellow
-set -g message-style bg=default,fg=yellow
-set -g message-command-style bg=default,fg=yellow
+set-window-option -g mode-keys vi                    # use `list-keys -T copy-mode-vi` to see more key
 
 set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
+set -g pane-active-border-style     'fg=magenta,bg=default'
+set -g pane-border-style            'fg=brightblack,bg=default'
+set -g status-style                 'bg=default' # transparent
+set -g window-status-current-format '#[fg=magenta]#W'
+set -g window-status-format          '#[fg=gray]#W'
+set -g mode-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g message-command-style bg=default,fg=yellow
 
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
@@ -51,8 +47,7 @@ set -g @tmux-nerd-font-window-name-show-name false
 set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 
-# Upgrade $TERM
-set-option -g  default-terminal   'screen-256color'
+set-option -g  default-terminal   'tmux-256color'
 set-option -sa terminal-features ',*256*:RGB'
 
 # Focus events enabled for terminals that support them
