--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -30,49 +30,50 @@ window:
 # NOTE: helpful hex codes
 # \x1b = escape (useful for vim-related keybindings)
 # \x02 = control-b (the default tmux prefix)
+# \x07 = control-g (the tmux prefix of mine)
 key_bindings:
  - { key: V,         mods: Command,         action: Paste }
  - { key: C,         mods: Command,         action: Copy }
- - { key: LBracket,  mods: Command|Control, chars: "\x02["    } # enter copy mode
- - { key: LBracket,  mods: Command,         chars: "\x02\x28" } # go to the last session
- - { key: RBracket,  mods: Command,         chars: "\x02\x29" } # go to the next session
- - { key: Backslash, mods: Command,         chars: "\x02%"    } # split tmux window horizontally
- - { key: Minus,     mods: Command,         chars: "\x02\""   } # split tmux window vertically
- - { key: G,         mods: Command|Shift,   chars: "\x02g"    } # open git manager 'jesseduffield/lazygit'
- - { key: F,         mods: Command,         chars: "\x02\x54" } # open t - tmux smart session manager
- - { key: S,         mods: Command,         chars: "\x02s"    } # open interactive tmux session client
- - { key: P,         mods: Command,         chars: "\x02L"    } # switch to the last tmux session
- - { key: U,         mods: Command,         chars: "\x02u"    } # open URLs 'joshmedeski/tmux-fzf-url'
- - { key: A,         mods: Command,         chars: "\x02c"    } # create a new tmux window
- - { key: X,         mods: Command,         chars: "\x02x"    } # kill the current pane
- - { key: Z,         mods: Command,         chars: "\x02z"    } # toggle zoom state of the current tmux pane
- - { key: Tab,       mods: Command,         chars: "\x02n"    } # switch to next tmux window
- - { key: O,         mods: Command,         chars: "\x02p"    } # switch to previous tmux window
- - { key: LBracket,  mods: Control,         chars: "\x02{"    } # swap pane -U
- - { key: RBracket,  mods: Control,         chars: "\x02}"    } # swap pane -D
- - { key: Space,     mods: Control,         chars: "\x02 "    } # next layout
- - { key: D,         mods: Command,         chars: "\x02F"    } # prop tmux
- - { key: Comma,     mods: Command,         chars: "\x02,"    } # rename the current tmux window
- - { key: Semicolon, mods: Command,         chars: "\x02:"    } # enter the tmux command prompt
- - { key: Key1,      mods: Control,         chars: "\x021"    } # select tmux window 1
- - { key: Key2,      mods: Control,         chars: "\x022"    } # ... 2
- - { key: Key3,      mods: Control,         chars: "\x023"    } # ... 3
- - { key: Key4,      mods: Control,         chars: "\x024"    } # ... 4
- - { key: Key5,      mods: Control,         chars: "\x025"    } # ... 5
- - { key: Key6,      mods: Control,         chars: "\x026"    } # ... 6
- - { key: Key7,      mods: Control,         chars: "\x027"    } # ... 7
- - { key: Key8,      mods: Control,         chars: "\x028"    } # ... 8
- - { key: Key9,      mods: Control,         chars: "\x029"    } # ... 9
- - { key: Key1,      mods: Alt,             chars: "\x02s0"   } # select tmux window 1
- - { key: Key2,      mods: Alt,             chars: "\x02s1"   } # ... 2
- - { key: Key3,      mods: Alt,             chars: "\x02s2"   } # ... 3
- - { key: Key4,      mods: Alt,             chars: "\x02s3"   } # ... 4
- - { key: Key5,      mods: Alt,             chars: "\x02s4"   } # ... 5
- - { key: Key6,      mods: Alt,             chars: "\x02s5"   } # ... 6
- - { key: Key7,      mods: Alt,             chars: "\x02s6"   } # ... 7
- - { key: Key8,      mods: Alt,             chars: "\x02s7"   } # ... 8
- - { key: Key9,      mods: Alt,             chars: "\x02s8"   } # ... 9
- - { key: Key0,      mods: Alt,             chars: "\x02s9"   } # ... 9
+ - { key: LBracket,  mods: Command|Control, chars: "\x07["    } # enter copy mode
+ - { key: LBracket,  mods: Command,         chars: "\x07\x28" } # go to the last session
+ - { key: RBracket,  mods: Command,         chars: "\x07\x29" } # go to the next session
+ - { key: Backslash, mods: Command,         chars: "\x07%"    } # split tmux window horizontally
+ - { key: Minus,     mods: Command,         chars: "\x07\""   } # split tmux window vertically
+ - { key: G,         mods: Command|Shift,   chars: "\x07g"    } # open git manager 'jesseduffield/lazygit'
+ - { key: F,         mods: Command,         chars: "\x07\x54" } # open t - tmux smart session manager
+ - { key: S,         mods: Command,         chars: "\x07s"    } # open interactive tmux session client
+ - { key: P,         mods: Command,         chars: "\x07L"    } # switch to the last tmux session
+ - { key: U,         mods: Command,         chars: "\x07u"    } # open URLs 'joshmedeski/tmux-fzf-url'
+ - { key: A,         mods: Command,         chars: "\x07c"    } # create a new tmux window
+ - { key: X,         mods: Command,         chars: "\x07x"    } # kill the current pane
+ - { key: Z,         mods: Command,         chars: "\x07z"    } # toggle zoom state of the current tmux pane
+ - { key: Tab,       mods: Command,         chars: "\x07n"    } # switch to next tmux window
+ - { key: O,         mods: Command,         chars: "\x07p"    } # switch to previous tmux window
+ - { key: LBracket,  mods: Control,         chars: "\x07{"    } # swap pane -U
+ - { key: RBracket,  mods: Control,         chars: "\x07}"    } # swap pane -D
+ - { key: Space,     mods: Control,         chars: "\x07 "    } # next layout
+ - { key: D,         mods: Command,         chars: "\x07F"    } # prop tmux
+ - { key: Comma,     mods: Command,         chars: "\x07,"    } # rename the current tmux window
+ - { key: Semicolon, mods: Command,         chars: "\x07:"    } # enter the tmux command prompt
+ - { key: Key1,      mods: Control,         chars: "\x071"    } # select tmux window 1
+ - { key: Key2,      mods: Control,         chars: "\x072"    } # ... 2
+ - { key: Key3,      mods: Control,         chars: "\x073"    } # ... 3
+ - { key: Key4,      mods: Control,         chars: "\x074"    } # ... 4
+ - { key: Key5,      mods: Control,         chars: "\x075"    } # ... 5
+ - { key: Key6,      mods: Control,         chars: "\x076"    } # ... 6
+ - { key: Key7,      mods: Control,         chars: "\x077"    } # ... 7
+ - { key: Key8,      mods: Control,         chars: "\x078"    } # ... 8
+ - { key: Key9,      mods: Control,         chars: "\x079"    } # ... 9
+ - { key: Key1,      mods: Alt,             chars: "\x07s0"   } # select tmux window 1
+ - { key: Key2,      mods: Alt,             chars: "\x07s1"   } # ... 2
+ - { key: Key3,      mods: Alt,             chars: "\x07s2"   } # ... 3
+ - { key: Key4,      mods: Alt,             chars: "\x07s3"   } # ... 4
+ - { key: Key5,      mods: Alt,             chars: "\x07s4"   } # ... 5
+ - { key: Key6,      mods: Alt,             chars: "\x07s5"   } # ... 6
+ - { key: Key7,      mods: Alt,             chars: "\x07s6"   } # ... 7
+ - { key: Key8,      mods: Alt,             chars: "\x07s7"   } # ... 8
+ - { key: Key9,      mods: Alt,             chars: "\x07s8"   } # ... 9
+ - { key: Key0,      mods: Alt,             chars: "\x07s9"   } # ... 9
 
 import:
   - ~/.config/alacritty/themes/themes/snazzy.yaml
