--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -18,6 +18,11 @@ bind g new-window -n '' lazygit
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 
+unbind C-b
+# bind C-g send-prefix
+bind-key C-g send-prefix
+set -g prefix C-g
+
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
