--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,17 +11,17 @@ set -g set-clipboard on       # use system clipboard
 set -g status-interval 2      # update status every 2 seconds
 set -g status-keys emacs      # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys, even for vim users
 set -g status-left-length 200 # increase status line length
-set -g status-position top    # macOS / darwin style
+set -g status-position top    # change the tmux bar position
 set -g status-right ''        # empty
 
 bind g new-window -n '' lazygit
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 
-unbind C-b
-# bind C-g send-prefix
+unbind C-b                    # C-b is the emacs key (backword a char)
 bind-key C-g send-prefix
 set -g prefix C-g
+bind c new-window -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
@@ -31,7 +31,8 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
-set-window-option -g mode-keys vi                    # use `list-keys -T copy-mode-vi` to see more key
+set  -g status-keys vi
+setw -g mode-keys   vi
 
 set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
