--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,239 +1,5 @@
-########################################################################################
- __  __ _       _                 _
-|  \/  (_)_ __ (_)_ __ ___   __ _| |
-| |\/| | | '_ \| | '_ ` _ \ / _` | |
-| |  | | | | | | | | | | | | (_| | |
-|_|  |_|_|_| |_|_|_| |_| |_|\__,_|_|
-
- _   _                  _                 _    ____             __ _
-| | | |_   _ _ __  _ __| | __ _ _ __   __| |  / ___|___  _ __  / _(_) __ _ ___
-| |_| | | | | '_ \| '__| |/ _` | '_ \ / _` | | |   / _ \| '_ \| |_| |/ _` / __|
-|  _  | |_| | |_) | |  | | (_| | | | | (_| | | |__| (_) | | | |  _| | (_| \__ \
-|_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|  \____\___/|_| |_|_| |_|\__, |___/
-       |___/|_|                                                      |___/
-#########################################################################################
-## lizhi
-## 2023-05-03
-
-# You have to change this based on your monitor
-monitor = , preferred, auto, auto
-
-exec-once = ~/.config/hypr/scripts/screensharing.sh
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing
-exec-once = waybar # For status bar
-exec-once = dunst # For Notification
-exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
-exec-once = fcitx5 -d --replace # For keyboard
-exec-once = swayidle -w timeout 300 'swaylock -f -c 000000'
-exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
-exec-once = keyd-application-mapper -d # key bind for chromium
-
-# exec-once = teamviewer --daemon start # TeamViewer
-# exec-once = ~/.config/hypr/scripts/startpage.sh # Start Page
-# exec-once = blueman-applet # # Bluetooth Make sure you have installed blueman
-
-input {
-    repeat_rate  = 50
-    repeat_delay = 240
-}
-
-general {
-    gaps_in = 3
-    gaps_out = 5
-    border_size = 2
-    col.active_border = rgb(cdd6f4)
-    col.inactive_border = rgba(595959aa)
-
-    layout = dwindle
-
-    sensitivity = 1.0 # for mouse cursor
-
-    apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
-}
-
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
-decoration {
-    rounding = 5
-    blur = 1
-    blur_size = 1 # minimum 1
-    blur_passes = 1 # minimum 1, more passes = more resource intensive.
-    blur_new_optimizations = true
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
-    drop_shadow = true
-    shadow_range = 3
-    col.shadow = 0xffa7caff
-    col.shadow_inactive = 0x50000000
-}
-
-
-# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-animations {
-    enabled = 1
-
-    bezier = overshot,0.13,0.99,0.29,1.1
-    animation = windows,1,4,overshot,popin
-    animation = fade,1,10,default
-    animation = workspaces,1,6,overshot,slide
-    animation = border,1,10,default
-}
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
-    pseudotile = 1 # enable pseudotiling on dwindle
-    force_split = 0
-    no_gaps_when_only = true
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_on_top        = true
-    new_is_master     = true
-    no_gaps_when_only = true
-}
-
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
-gestures {
-    workspace_swipe = off
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
-
-# misc {
-#   disable_hyprland_logo=true
-#   disable_splash_rendering=true
-#   mouse_move_enables_dpms=true
-#   no_vfr=1
-# }
-########################################################################################
-
-\ \        / (_)         | |                   |  __ \     | |
-  \ \  /\  / / _ _ __   __| | _____      _____  | |__) |   _| | ___  ___
-   \ \/  \/ / | | '_ \ / _` |/ _ \ \ /\ / / __| |  _  / | | | |/ _ \/ __|
-    \  /\  /  | | | | | (_| | (_) \ V  V /\__ \ | | \ \ |_| | |  __/\__ \
-     \/  \/   |_|_| |_|\__,_|\___/ \_/\_/ |___/ |_|  \_\__,_|_|\___||___/
-
-########################################################################################
-
-
-# Float Necessary Windows
-windowrule = float, Rofi
-windowrule = float, pavucontrol
-windowrulev2 = float, class:^()$,title:^(Picture in picture)$
-
-# Increase the opacity
-windowrulev2 = opacity 0.8, class:^(kitty)$
-windowrulev2 = opacity 0.8, class:^(alacritty)$
-windowrulev2 = opacity 0.8, class:^(thunar)$
-
-# Move/resize windows with SUPER + LMB/RMB and dragging
-bindm = SUPER, mouse:272, movewindow
-bindm = SUPER, mouse:273, resizewindow
-###########################################
-  ____  _           _ _
- |  _ \(_)         | (_)
- | |_) |_ _ __   __| |_ _ __   __ _ ___
- |  _ <| | '_ \ / _` | | '_ \ / _` / __|
- | |_) | | | | | (_| | | | | | (_| \__ \
- |____/|_|_| |_|\__,_|_|_| |_|\__, |___/
-                               __/ |
-                              |___/
-
-###########################################
-
-# example binds
-bind = SUPER, Q, killactive
-bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-# bind = SUPER, B, exec, librewolf
-bind = SUPER, M, fullscreen, 1
-bind = SUPERSHIFT ,M ,fullscreen, 0
-bind = ALT, SPACE, exec, rofi -show drun
-bind = SUPER, RETURN, exec, alacritty
-bind = SUPERSHIFT, RETURN, exec, kitty
-bind = SUPERCTRL, A, exec, ~/.config/hypr/scripts/alacritty_ssh_hk.sh
-bind = SUPERCTRL, S, exec, ~/.config/hypr/scripts/alacritty_ssh_tk.sh
-bind = SUPERCTRL, D, exec, ~/.config/hypr/scripts/alacritty_ssh_openwrt.sh
-bind = SUPERCTRL, RETURN, exec, emacs
-bind = SUPER, G, exec, chromium
-bind = SUPERSHIFT, F, exec, firefox
-# bind = SUPER, E, exec, pcmanfm
-# bind = SUPER, P, pseudo,
-# bind = SUPER, ESCAPE, exec, sudo systemctl suspend
-bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-
-# bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
-# bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
-# bind=,XF86AudioRaiseVolume,exec,~/.config/hypr/scripts/volume up
-# bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
-
-# bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
-# bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
-bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
-bind=SUPERSHIFT,E,exec,wlogout
-bind = SUPER, T, togglefloating,
-bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu
-
-bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-
-# Screen recorder
-bind = SUPER, R, exec, wf-recorder -g "$(slurp)"
-# Emoji selector
-# bind=SUPER,E,exec,rofi -modi emoji -show emoji
-
-# bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
-
-bind = SUPER, J, movefocus, d
-bind = SUPER, K, movefocus, u
-bind = SUPER, H, movefocus, l
-bind = SUPER, L, movefocus, r
-
-bind = SUPERCTRL, H, resizeactive, -80 0
-bind = SUPERCTRL, J, resizeactive, 0 40
-bind = SUPERCTRL, K, resizeactive, 0 -40
-bind = SUPERCTRL, L, resizeactive, 80 0
-
-bind = SUPERSHIFT, H, movewindow, l
-bind = SUPERSHIFT, L, movewindow, r
-bind = SUPERSHIFT, K, movewindow, u
-bind = SUPERSHIFT, J, movewindow, d
-
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
-
-bind = SUPERCTRL, 1, movetoworkspace, 1
-bind = SUPERCTRL, 2, movetoworkspace, 2
-bind = SUPERCTRL, 3, movetoworkspace, 3
-bind = SUPERCTRL, 4, movetoworkspace, 4
-bind = SUPERCTRL, 5, movetoworkspace, 5
-bind = SUPERCTRL, 6, movetoworkspace, 6
-bind = SUPERCTRL, 7, movetoworkspace, 7
-bind = SUPERCTRL, 8, movetoworkspace, 8
-bind = SUPERCTRL, 9, movetoworkspace, 9
-bind = SUPERCTRL, 0, movetoworkspace, 10
-
-bind = SUPERSHIFT, 1, movetoworkspacesilent, 1
-bind = SUPERSHIFT, 2, movetoworkspacesilent, 2
-bind = SUPERSHIFT, 3, movetoworkspacesilent, 3
-bind = SUPERSHIFT, 4, movetoworkspacesilent, 4
-bind = SUPERSHIFT, 5, movetoworkspacesilent, 5
-bind = SUPERSHIFT, 6, movetoworkspacesilent, 6
-bind = SUPERSHIFT, 7, movetoworkspacesilent, 7
-bind = SUPERSHIFT, 8, movetoworkspacesilent, 8
-bind = SUPERSHIFT, 9, movetoworkspacesilent, 9
-bind = SUPERSHIFT, 0, movetoworkspacesilent, 10
+source = ~/.config/hypr/base.conf
+source = ~/.config/hypr/exec-once.conf
+source = ~/.config/hypr/windworule.conf
+source = ~/.config/hypr/bind.conf
+source = ~/.config/hypr/env/env_nvidia.conf
