--- a/config/ripgrep/config
+++ b/config/ripgrep/config
@@ -1,8 +1,28 @@
 ## Type additions
+## Add new types to search by
+--type-add
+dts:*.d.ts
 
-# add new types to search by
+--type-add
+el:*.el
+
+--type-add
+jsx:*.jsx
+
+--type-add
+gql:*.{graphql,gql}
+
+--type-add
+pkg:package.json
+
 --type-add
 style:*.{css,sass,less,stylus}
+
+--type-add
+stories:**/*.stories.{ts,tsx,js,jsx}
+
+--type-add
+spec:*.{spec,test}.{ts,tsx,js,jsx}
 
 --type-add
 pug:*.{pug,jade}
@@ -14,28 +34,10 @@ vue:*.{vue,ts}
 tmpl:*.{html,hbs,pug}
 
 --type-add
-dts:*.d.ts
-
---type-add
-spec:*.{spec,test}.{ts,tsx,js,jsx}
-
---type-add
 test:*.{spec,test}.{ts,tsx,js,jsx}
 
 --type-add
 tsx:*.tsx
-
---type-add
-stories:**/*.stories.{ts,tsx,js,jsx}
-
---type-add
-jsx:*.jsx
-
---type-add
-gql:*.{graphql,gql}
-
---type-add
-pkg:package.json
 
 # ignore case
 --smart-case
