chore: hyprland bind

--- a/config/hypr/base.conf
+++ b/config/hypr/base.conf
@@ -1,5 +1,6 @@
 # You have to change this based on your monitor
-monitor = eDP-1, preferred, auto, auto
+# monitor = , preferred, auto, auto
+monitor = eDP-1, 2560x1440@60, 0x0, 1
 
 input {
     repeat_rate  = 50
