--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -10,16 +10,14 @@ bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
 bind = SUPER, RETURN, exec, alacritty
-# bind = SUPERSHIFT, RETURN, exec, alacritty -e emacs -nw ~/org/todo.org
-bind = SUPERSHIFT, RETURN, exec, emacs ~/org/todo.org
-bind = SUPERCTRL, RETURN, exec, emacs
+bind = SUPERSHIFT, RETURN, exec, emacsclient -c -s doom -a emacs ~/org/todo.org
 # bind = SUPERCTRL, A, exec, ~/.config/hypr/scripts/alacritty_ssh_hk.sh
 bind = SUPERCTRL, A, exec, alacritty -e ssh hk-tccloud.com
 bind = SUPERCTRL, S, exec, alacritty -e ssh tk-tccloud.com
 bind = SUPERCTRL, D, exec, alacritty -e ssh openwrt-arch.local
 bind = SUPERCTRL, Q, exec, ~/.config/hypr/scripts/translate.sh
 bind = SUPER, ESC, exec, wl-paste | trans -sp
-bind = SUPER, G, exec, chromium
+bind = SUPER, G, exec, chromium --gtk-version=4
 bind = SUPERSHIFT, F, exec, firefox
 # bind = SUPER, E, exec, pcmanfm
 # bind = SUPER, P, pseudo,
@@ -49,7 +47,8 @@ bind = SUPER, R, exec, wf-recorder -g "$(slurp)"
 bind = SUPER, J, movefocus, d
 bind = SUPER, K, movefocus, u
 bind = SUPER, H, movefocus, l
-bind = SUPER, L, movefocus, r
+bind = SUPER, L, movewindow, r
+bind = SUPER, L, movefocus, l
 
 bind = SUPERCTRL, H, resizeactive, -80 0
 bind = SUPERCTRL, J, resizeactive, 0 40
