--- a/config/hypr/exec-once.conf
+++ b/config/hypr/exec-once.conf
@@ -8,6 +8,7 @@ exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 300 'hyprctl
 exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d # key bind for chromium
+exec-once = emacs --daemon=doom
 
 # exec-once = teamviewer --daemon start # TeamViewer
 # exec-once = ~/.config/hypr/scripts/startpage.sh # Start Page
