feat(hypr): make alacritty, emacs float

--- a/config/hypr/base.conf
+++ b/config/hypr/base.conf
@@ -1,6 +1,7 @@
 # You have to change this based on your monitor
 # monitor = , preferred, auto, auto
 monitor = eDP-1, 2560x1440@60, 0x0, 1
+# monitor = eDP-1, 1920x1080@144, 0x0, 1
 
 input {
     repeat_rate  = 50
@@ -14,10 +15,9 @@ general {
     col.active_border = rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
-    layout = dwindle
+    layout = master
 
     sensitivity = 1.0 # for mouse cursor
-
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
@@ -35,6 +35,9 @@ decoration {
     shadow_range = 3
     col.shadow = 0xffa7caff
     col.shadow_inactive = 0x50000000
+
+    active_opacity = 1
+    inactive_opacity = 1
 }
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
