--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 source = ~/.config/hypr/base.conf
 source = ~/.config/hypr/exec-once.conf
-source = ~/.config/hypr/windworule.conf
+source = ~/.config/hypr/windowrule.conf
 source = ~/.config/hypr/bind.conf
 source = ~/.config/hypr/env/env_nvidia.conf
