--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -1,28 +1,30 @@
+$SCRIPT = ~/.config/hypr/scripts
 # Move/resize windows with SUPER + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
 # example binds
-bind = SUPER, Q, killactive
-bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-# bind = SUPER, B, exec, librewolf
-bind = SUPER, M, fullscreen, 1
-bind = SUPERSHIFT ,M ,fullscreen, 0
 bind = ALT, SPACE, exec, rofi -show drun
-bind = SUPER, RETURN, exec, alacritty
-bind = SUPERSHIFT, RETURN, exec, emacsclient -c -s doom -a emacs ~/org/todo.org
-# bind = SUPERCTRL, A, exec, ~/.config/hypr/scripts/alacritty_ssh_hk.sh
+bind = SUPER, Q, killactive
+bind = SUPER, T, togglefloating,
+# bind = SUPER, ESC, exec, wl-paste | trans -sp
+bind = SUPER, G, exec, chromium --gtk-version=4
+bind = SUPER, M, fullscreen, 1
+bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = SUPERSHIFT ,M ,fullscreen, 0
+# bind = SUPER, B, exec, librewolf
+bind = SUPER, RETURN, exec, $SCRIPT/toggle_start.sh alacritty
+bind = SUPERSHIFT, RETURN, exec, $SCRIPT/toggle_start.sh emacsclient
 bind = SUPERCTRL, A, exec, alacritty -e ssh hk-tccloud.com
 bind = SUPERCTRL, S, exec, alacritty -e ssh tk-tccloud.com
 bind = SUPERCTRL, D, exec, alacritty -e ssh openwrt-arch.local
-bind = SUPERCTRL, Q, exec, ~/.config/hypr/scripts/translate.sh
-bind = SUPER, ESC, exec, wl-paste | trans -sp
-bind = SUPER, G, exec, chromium --gtk-version=4
+bind = SUPERCTRL, Q, exec, $SCRIPT/translate.sh
+bind = SUPERCTRL, M, exec, killall -SIGUSR1 waybar # waybar: toggle visibility
 bind = SUPERSHIFT, F, exec, firefox
+bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # bind = SUPER, E, exec, pcmanfm
 # bind = SUPER, P, pseudo,
 # bind = SUPER, ESCAPE, exec, sudo systemctl suspend
-bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 bind = SUPERALT, Up, exec, ~/.config/hypr/scripts/volume up
 bind = SUPERALT, Down, exec, ~/.config/hypr/scripts/volume down
@@ -30,17 +32,16 @@ bind = SUPERALT, M, exec, ~/.config/hypr/scripts/volume mute
 
 # bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
 # bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
-bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
+# TODO hyprPicker not working Nvidia
+# bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
 
 # bind=SUPERSHIFT,E,exec,wlogout
-bind = SUPER, T, togglefloating,
-bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu
+bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu         # take pomotroid
 bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
+bind = SUPERSHIFT, R, exec, wf-recorder -g "$(slurp)"          # Screen recorder
 
-# Screen recorder
-bind = SUPER, R, exec, wf-recorder -g "$(slurp)"
 # Emoji selector
-# bind=SUPER,E,exec,rofi -modi emoji -show emoji
+bind=SUPER,E,exec,rofi -modi emoji -show emoji
 
 # bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
 
@@ -50,10 +51,10 @@ bind = SUPER, H, movefocus, l
 bind = SUPER, L, movewindow, r
 bind = SUPER, L, movefocus, l
 
-bind = SUPERCTRL, H, resizeactive, -80 0
+bind = SUPERCTRL, H, resizeactive, -120 0
 bind = SUPERCTRL, J, resizeactive, 0 40
 bind = SUPERCTRL, K, resizeactive, 0 -40
-bind = SUPERCTRL, L, resizeactive, 80 0
+bind = SUPERCTRL, L, resizeactive, 120 0
 
 bind = SUPERSHIFT, H, movewindow, l
 bind = SUPERSHIFT, L, movewindow, r
